# GroupIt

./: .gitignore  CMakeLists.txt  README.md
include/: DeviceController.hpp  GameSolver.hpp  ImageUtils.hpp
src/: DeviceController.cpp  GameSolver.cpp  ImageUtils.cpp  main.cpp
